parser/tests/snapshots/errors__import_bad_name.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse import statement
  ┌─ import_bad_name:1:13
  │
1 │ import x as 123
  │             ^^^ Unexpected token. Expected a name


